--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "handlebars": "^4.5.0"
   }
 }
