--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mac Villegas",
   "license": "ISC",
   "dependencies": {
+    "core-util-is": "^1.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
